# grove-bernardy-lenls18

./: .gitmodules  LICENSE  README.md  grove-bernardy-lenls18.cabal  shell.nix
src/Fragment/: Fragment.hs
src/Representations/: Representations.hs
src/Representations/Eval/: Eval.hs  Model.hs
src/Representations/FOL/: FOL.hs
