cabal-version:       >=1.10
name:                grove-bernardy-lenls18
version:             0.1.0.0
synopsis:            Code for Grove and Bernardy 2021.
description:         Code for the paper 'Probabilistic compositional semantics, purely',
                     presented at LENLS18 (https://lenls.github.io/lenls18/).
                     Available at
license:             MIT
license-file:        LICENSE
author:              Julian Grove and Jean-Philippe Bernardy
maintainer:          julian.grove@gmail.com
copyright:           2021
build-type:          Simple

library 
  exposed-modules: Fragment.Fragment
                   Representations.Eval.Model
  other-modules: ProbProg.Boolean
                 ProbProg.Gibbs
                 ProbProg.Histograms
                 ProbProg.Logits
                 ProbProg.PreciseProb
                 ProbProg.ProbLang
                 Representations.Eval.Eval
                 Representations.Representations
  hs-source-dirs: src
  build-depends: base
               , containers
               , gasp
               , mwc-random
               , statistics
  default-language: Haskell2010